package com.kyhsgeekcode.disassembler.ui

object MainTestTags {
    const val IMPORT_SAF_BUTTON = "import_saf_button"
    const val IMPORT_ADVANCED_BUTTON = "import_advanced_button"
    const val EXPORT_PROJECT_BUTTON = "export_project_button"
    const val COPY_DIALOG_YES_BUTTON = "copy_dialog_yes_button"
    const val COPY_DIALOG_NO_BUTTON = "copy_dialog_no_button"
}
